--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Publish with Gradle
-        run: ./gradlew publish
+        run: ./gradlew build publish
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_NAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_TOKEN }}
