--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew shadowJar
+      run: ./gradlew build shadowJar
