--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -23,6 +23,7 @@ dependencies {
         because "WorldEdit defined a constraint that we must use 2.8.0 and there is no way to ignore it"
     }
     implementation "org.apache.commons:commons-lang3:3.12.0"
+    implementation "org.bstats:bstats-bukkit:2.2.1"
 
     // probably fix for some exception?
     implementation "org.apache.logging.log4j:log4j-slf4j-impl:2.14.1"
@@ -74,6 +75,7 @@ shadowJar {
     relocate "org.apache.commons.lang3", "net.dzikoysk.funnyguilds.libs.org.apache.commons.lang3"
     relocate "org.apache.logging", "net.dzikoysk.funnyguilds.libs.org.apache.logging"
     relocate "org.slf4j", "net.dzikoysk.funnyguilds.libs.org.slf4j"
+    relocate "org.bstats", "net.dzikoysk.funnyguilds.libs.bstats"
     relocate "eu.okaeri", "net.dzikoysk.funnyguilds.libs.eu.okaeri"
 
     exclude "org/checkerframework/**"
