--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 
     shadow "com.sk89q.worldedit:worldedit-bukkit:7.2.5"
     shadow "com.sk89q.worldguard:worldguard-bukkit:7.0.5"
+    shadow "com.gmail.filoghost.holographicdisplays:holographicdisplays-api:2.4.0"
 
     testImplementation 'org.spigotmc:spigot-api:1.16.2-R0.1-SNAPSHOT'
     testImplementation 'org.mockito:mockito-core:3.11.2'
