--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -34,9 +34,11 @@ dependencies {
     shadow "org.apache.logging.log4j:log4j-core:2.14.1"
 
     // integrations
-    shadow("me.clip:placeholderapi:2.10.9") {
+    shadow("me.clip:placeholderapi:2.10.10") {
         exclude group: "com.google.code.gson", module: "gson"
     }
+    shadow "net.kyori:adventure-api:4.9.1"
+
     shadow "me.robin:leaderheads-api:1.0.0"
     shadow "net.milkbowl.vault:VaultAPI:1.7"
     shadow("be.maximvdw:MVdWPlaceholderAPI:3.1.1-SNAPSHOT") {
