--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -6,9 +6,10 @@ dependencies {
     }
 
     // funnyguilds & panda utilities
-    implementation "net.dzikoysk:funnycommands:0.4.1"
+    implementation "net.dzikoysk:funnycommands:0.4.2"
     implementation "org.panda-lang:expressible:1.0.16"
     implementation "org.panda-lang:panda-utilities:0.5.0-alpha"
+    implementation "org.panda-lang.utilities:di:1.4.1"
 
     // okaeri config library
     implementation "eu.okaeri:okaeri-configs-yaml-bukkit:3.3.6"
