--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation "net.dzikoysk:funnycommands:0.4.2"
     implementation "org.panda-lang:expressible:1.0.16"
     implementation "org.panda-lang:panda-utilities:0.5.0-alpha"
+    implementation "org.panda-lang.utilities:di:1.4.1"
 
     // okaeri config library
     implementation "eu.okaeri:okaeri-configs-yaml-bukkit:3.3.6"
@@ -94,4 +95,6 @@ shadowJar {
 
 test {
     useJUnitPlatform()
+    forkEvery = 1
+    maxParallelForks = 4
 }
