Holographic displays hook (#1661)
* Add holographic displays hook.

* Add getHologramHook() method

* Add interfaces.

* Change the logic of updating the hologram lines

* fix merge

* Implement FunnyHologram logic with configuration.

* Remove redundant annotations.

* Assign config to the field.

* Do "todo" and remove  throwing exceptions. (residues after testing)

* Add HologramUpdateLocationHandler.
Fix hologram configuration bug.

* Rename package form subcomponents to sections.

* Add return type in deleteHologram() methods.

* Add return type FunnyHologram in the methods from FunnyHologramImpl class.

* Functional logic in getCenter() method.

* Move all logic of updating holograms out of class A scope.

* For dziki

* Remove custom name annotation in HologramConfiguration.

* Move formatter to Async section in HologramUpdateHandler.
Remove timer in HologramUpdateHandler.

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ subprojects {
         maven { url "https://repo.extendedclip.com/content/repositories/placeholderapi" }
         maven { url "https://nexus.codecrafter47.de/content/repositories/public" }
         maven { url "https://repo.mvdw-software.com/content/groups/public" }
+        maven { url "https://repo.codemc.io/repository/maven-public" }
     }
 
     apply plugin: 'groovy'
