--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -38,7 +38,8 @@ dependencies {
     shadow("me.clip:placeholderapi:2.10.10") {
         exclude group: "com.google.code.gson", module: "gson"
     }
-    shadow "net.kyori:adventure-api:4.9.2"
+    shadow "net.kyori:adventure-api:4.9.3"
+    shadow "net.kyori:adventure-platform-bukkit:4.0.0"
 
     shadow "me.robin:leaderheads-api:1.0.0"
     shadow "net.milkbowl.vault:VaultAPI:1.7"
