--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -37,8 +37,10 @@ dependencies {
     // integrations
     shadow("me.clip:placeholderapi:2.10.10") {
         exclude group: "com.google.code.gson", module: "gson"
+        exclude group: "net.kyori", module: "adventure-platform-bukkit"
     }
     shadow "net.kyori:adventure-api:4.9.3"
+    shadow "net.kyori:adventure-platform-bukkit:4.0.1-SNAPSHOT"
 
     shadow "me.robin:leaderheads-api:1.0.0"
     shadow "net.milkbowl.vault:VaultAPI:1.7"
