--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ subprojects {
         maven { url "https://repo.panda-lang.org/releases" }
         maven { url "https://libraries.minecraft.net" }
         maven { url "https://storehouse.okaeri.eu/repository/maven-public" }
-        maven { url "https://maven.sk89q.com/repo" }
+        maven { url "https://maven.enginehub.org/repo" }
         maven { url "https://repo.extendedclip.com/content/repositories/placeholderapi" }
         maven { url "https://nexus.codecrafter47.de/content/repositories/public" }
         maven { url "https://repo.mvdw-software.com/content/groups/public" }
