--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,5 +10,8 @@ updates:
   ignore:
   - dependency-name: com.sk89q.worldedit:worldedit-bukkit
     versions:
-      - "> 7.2.6"
+    - "> 7.2.6"
+  - dependency-name: me.clip:placeholderapi
+    versions:
+    - "> 2.10.9"
 
