--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,11 @@ subprojects {
     repositories {
         mavenLocal()
         mavenCentral()
-
         maven { url "https://hub.spigotmc.org/nexus/content/repositories/snapshots" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
         maven { url "https://repo.panda-lang.org/releases" }
         maven { url "https://libraries.minecraft.net" }
+        maven { url "https://papermc.io/repo/repository/maven-public/" }
         maven { url "https://storehouse.okaeri.eu/repository/maven-public" }
         maven { url "https://maven.enginehub.org/repo" }
         maven { url "https://repo.extendedclip.com/content/repositories/placeholderapi" }
