Add legacy configuration migrations - Rename freeCam-compensation to freecam-compensation - Migrate old top-level keys to heart-configuration subconfig - Migrate old top-level keys to tnt-protection subconfig - Migrate old config.yml tablist into tablist.yml - Rename heart-configuration's use-player-position-for-centery to use-player-position-for-center-y

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -12,9 +12,9 @@ dependencies {
     implementation "net.dzikoysk:funnycommands:0.5.2"
 
     // okaeri config library
-    implementation "eu.okaeri:okaeri-configs-yaml-bukkit:3.4.2"
-    implementation "eu.okaeri:okaeri-configs-serdes-commons:3.4.2"
-    implementation "eu.okaeri:okaeri-configs-validator-okaeri:3.4.2"
+    implementation "eu.okaeri:okaeri-configs-yaml-bukkit:4.0.0-beta12"
+    implementation "eu.okaeri:okaeri-configs-serdes-commons:4.0.0-beta12"
+    implementation "eu.okaeri:okaeri-configs-validator-okaeri:4.0.0-beta12"
 
     // general stuff
     //noinspection GradlePackageUpdate
