--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     implementation "eu.okaeri:okaeri-configs-yaml-bukkit:4.0.0-beta14"
     implementation "eu.okaeri:okaeri-configs-serdes-commons:4.0.0-beta14"
     implementation "eu.okaeri:okaeri-configs-validator-okaeri:4.0.0-beta14"
+    // okaeri holographicdisplays commons
+    implementation "eu.okaeri:okaeri-commons-bukkit-holographicdisplays:0.2.9"
 
     // general stuff
     //noinspection GradlePackageUpdate
