--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     shadow "com.gmail.filoghost.holographicdisplays:holographicdisplays-api:2.4.9"
 
     testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.10'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test:1.6.20'
     testImplementation 'org.spigotmc:spigot-api:1.16.2-R0.1-SNAPSHOT'
     testImplementation 'org.mockito:mockito-core:4.4.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.4.0'
