GH-1903 Rewrite tests to kotlin (Resolves #1903) (#1904)
* Future is now

* Rewrite tests to kotlin

* Now works

* Nice

* takeif

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'maven-publish'
     id 'checkstyle'
     id 'org.openrewrite.rewrite' version '5.19.3'
+    id 'org.jetbrains.kotlin.jvm' version '1.6.20'
 }
 
 rewrite {
@@ -41,8 +42,8 @@ allprojects {
 }
 
 subprojects {
-    apply plugin: 'groovy'
     apply plugin: 'com.github.johnrengelman.shadow'
+    apply plugin: 'kotlin'
 
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
