--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -37,7 +37,6 @@ dependencies {
 
     // bukkit stuff
     shadow "org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT"
-    shadow "com.mojang:authlib:3.2.38"
     shadow "org.apache.logging.log4j:log4j-core:2.17.2"
 
     // integrations
@@ -58,6 +57,7 @@ dependencies {
     testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.10'
     testImplementation 'org.jetbrains.kotlin:kotlin-test:1.6.20'
     testImplementation 'org.spigotmc:spigot-api:1.16.2-R0.1-SNAPSHOT'
+    testImplementation 'com.mojang:authlib:3.2.38'
     testImplementation 'org.mockito:mockito-core:4.4.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.4.0'
     testImplementation 'org.mockito:mockito-inline:4.4.0'
