Add distribution to setup-java

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
+        distribution: 'temurin'
         java-version: ${{ matrix.jdk }}
         cache: 'gradle'
     - name: Grant execute permission for gradlew
