--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ allprojects {
         maven { url "https://nexus.codecrafter47.de/content/repositories/public" }
         maven { url "https://repo.mvdw-software.com/content/groups/public" }
         maven { url "https://repo.codemc.io/repository/maven-public" }
+        maven { url "https://repo.papermc.io/repository/maven-public/"}
     }
 }
 
