--- a/nms/v1_19R1/build.gradle
+++ b/nms/v1_19R1/build.gradle
@@ -2,8 +2,9 @@ dependencies {
     implementation project(":nms:api")
     implementation project(":nms:v1_8R3")
 
-    shadow "org.spigotmc:spigot:1.18-R0.1-SNAPSHOT"
-    shadow "org.spigotmc:spigot-api:1.18-R0.1-SNAPSHOT"
+    shadow "org.spigotmc:spigot:1.19-R0.1-SNAPSHOT"
+    shadow "org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT"
+    shadow 'org.apache.commons:commons-lang3:3.12.0'
     shadow "io.netty:netty-all:4.1.77.Final"
     shadow "com.mojang:authlib:3.2.38"
     shadow "it.unimi.dsi:fastutil:8.5.8"
