--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,5 @@ jobs:
       - name: Publish with Gradle
         run: ./gradlew clean build publish --stacktrace
         env:
-          RELEASES_MAVEN_NAME: ${{ secrets.RELEASES_MAVEN_NAME }}
-          RELEASES_MAVEN_TOKEN: ${{ secrets.RELEASES_MAVEN_TOKEN }}
-          SNAPSHOTS_MAVEN_NAME: ${{ secrets.SNAPSHOTS_MAVEN_NAME }}
-          SNAPSHOTS_MAVEN_TOKEN: ${{ secrets.SNAPSHOTS_MAVEN_TOKEN }}
+          MAVEN_NAME: ${{ secrets.MAVEN_NAME }}
+          MAVEN_TOKEN: ${{ secrets.MAVEN_TOKEN }}
