--- a/build.gradle
+++ b/build.gradle
@@ -66,21 +66,16 @@ subprojects {
                 if (version.toString().endsWith("-SNAPSHOTS")) {
                     name = "snapshots"
                     url = uri("https://repo.panda-lang.org/snapshots")
-
-                    credentials {
-                        username = System.getenv("SNAPSHOTS_MAVEN_NAME")
-                        password = System.getenv("SNAPSHOTS_MAVEN_TOKEN")
-                    }
                 } else {
                     name = "releases"
                     url = uri("https://repo.panda-lang.org/releases")
-
-                    credentials {
-                        username = System.getenv("RELEASES_MAVEN_NAME")
-                        password = System.getenv("RELEASES_MAVEN_TOKEN")
-                    }
                 }
+
                 //allowInsecureProtocol(true)
+                credentials {
+                    username = System.getenv("MAVEN_NAME")
+                    password = System.getenv("MAVEN_TOKEN")
+                }
             }
         }
         publications {
