--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ rewrite {
 
 allprojects {
     group = "net.dzikoysk.funnyguilds"
-    version = "4.10.2"
+    version = "4.10.3-SNAPSHOT"
 
     apply plugin: 'java-library'
     apply plugin: 'maven-publish'
