--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,8 @@ subprojects {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
 
+    compileJava.options.encoding = 'UTF-8'
+
     publishing {
         repositories {
             maven {
