--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'checkstyle'
     id 'org.openrewrite.rewrite' version '5.29.1'
     id 'org.jetbrains.kotlin.jvm' version '1.7.20'
+    id("xyz.jpenilla.run-paper") version "1.0.6"
 }
 
 rewrite {
