GH-2190 Oddzielne uprawnienie na teleportowanie do innej gildii (Resolves #2190)

--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -20,6 +20,7 @@ permissions:
       funnyguilds.reload: true
       funnyguilds.admin.build: true
       funnyguilds.admin.interact: true
+      funnyguilds.admin.teleport: true
       funnyguilds.admin.notification: true
       funnyguilds.admin.disabledummy: false
 
