--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -16,11 +16,11 @@ dependencies {
     implementation "net.dzikoysk:funnycommands:0.5.3"
 
     // okaeri config library
-    implementation "eu.okaeri:okaeri-configs-yaml-bukkit:4.0.6"
-    implementation "eu.okaeri:okaeri-configs-serdes-commons:4.0.6"
-    implementation "eu.okaeri:okaeri-configs-validator-okaeri:4.0.6"
+    implementation "eu.okaeri:okaeri-configs-yaml-bukkit:4.0.7"
+    implementation "eu.okaeri:okaeri-configs-serdes-commons:4.0.7"
+    implementation "eu.okaeri:okaeri-configs-validator-okaeri:4.0.7"
     // okaeri holographicdisplays commons
-    implementation "eu.okaeri:okaeri-commons-bukkit-holographicdisplays:0.2.20"
+    implementation "eu.okaeri:okaeri-commons-bukkit-holographicdisplays:0.2.21"
 
     // general stuff
     //noinspection GradlePackageUpdate
@@ -51,16 +51,16 @@ dependencies {
         because "PlaceholderAPI on versions higher than 2.10.9 causes GH-1700 for some unknown reason"
         exclude group: "com.google.code.gson", module: "gson"
     }
-    shadow "net.kyori:adventure-api:4.11.0"
+    shadow 'net.kyori:adventure-api:4.12.0'
     shadow "com.gmail.filoghost.holographicdisplays:holographicdisplays-api:2.4.9"
 
-    testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.11'
-    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5:1.7.21'
+    testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.12'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5:1.7.22'
     testImplementation 'org.spigotmc:spigot-api:1.16.2-R0.1-SNAPSHOT'
     testImplementation 'com.mojang:authlib:3.2.38'
-    testImplementation 'org.mockito:mockito-core:4.8.1'
-    testImplementation 'org.mockito:mockito-junit-jupiter:4.8.1'
-    testImplementation 'org.mockito:mockito-inline:4.8.1'
+    testImplementation 'org.mockito:mockito-core:4.9.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.9.0'
+    testImplementation 'org.mockito:mockito-inline:4.9.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
     testImplementation 'org.panda-lang:expressible-junit:1.2.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
