--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -51,7 +51,7 @@ dependencies {
         because "PlaceholderAPI on versions higher than 2.10.9 causes GH-1700 for some unknown reason"
         exclude group: "com.google.code.gson", module: "gson"
     }
-    shadow 'net.kyori:adventure-api:4.12.0'
+    shadow "net.kyori:adventure-api:4.12.0"
     shadow "com.gmail.filoghost.holographicdisplays:holographicdisplays-api:2.4.9"
 
     testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.12'
