--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     }
     shadow "net.kyori:adventure-api:4.12.0"
     shadow "com.gmail.filoghost.holographicdisplays:holographicdisplays-api:2.4.9"
+    shadow "com.github.decentsoftware-eu:decentholograms:2.7.9"
 
     testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.12.1'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5:1.7.22'
