GH-2212 Support DecentHolograms (Resolves #2068)
* Add decentholograms dependency

* add softdepend to dont forgor :skull:

* cringe

* try code

* fixes

* chamges

* finally everything works

* chamges

* chamges

* now???

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ allprojects {
         maven { url "https://nexus.codecrafter47.de/content/repositories/public" }
         maven { url "https://repo.codemc.io/repository/maven-public" }
         maven { url "https://repo.papermc.io/repository/maven-public/"}
+        maven { url "https://jitpack.io" }
     }
 }
 
