GH-1510 Use kts dsl in build files

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,2 @@
 org.gradle.parallel=true
-
-# OpenRewrite for Java 16+
-# ~ https://docs.openrewrite.org/getting-started/recipe-development-environment#ide-configuration
-org.gradle.jvmargs=-Dfile.encoding=UTF-8 \
-                    --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAME \
-                    --add-exports jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
-                    --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
-                    --add-exports jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED \
-                    --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
-                    --add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED \
-                    --add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
-                    --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
-                    --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
-                    --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+org.gradle.jvmargs='-Dfile.encoding=UTF-8'
