Add label and ignore dependencies in renovate

--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,13 @@
   "extends": [
     "config:base"
   ],
+  "ignoreDeps": [
+    "com.google.guava:guava",
+    "com.google.code.gson:gson",
+    "me.clip:placeholderapi"
+  ],
   "schedule": [
     "every 1 month on the first day of the month"
-  ]
+  ],
+  "labels": ["Dependencies"]
 }
