GH-2314 Update Gradle to v8

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,10 @@
 # Gradle
 org.gradle.parallel=true
 org.gradle.jvmargs='-Dfile.encoding=UTF-8'
+org.gradle.logging.stacktrace=full
+
+# Kotlin
+kotlin.stdlib.default.dependency=false
 
 # Maven Credentials
 mavenUser=
