--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: FunnyGuilds
 main: net.dzikoysk.funnyguilds.FunnyGuilds
-version: '${funnyGuildsVersion} Snowdrop-${funnyGuildsCommit}'
+version: '${funnyGuildsVersion} Primrose-${funnyGuildsCommit}'
 author: 'FunnyGuilds Team'
 website: https://github.com/FunnyGuilds
 softdepend: [WorldEdit, WorldGuard, Vault, PlaceholderAPI, FunnyTab, HolographicDisplays, DecentHolograms, Multiverse-Core]
