--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: Publish FunnyGuilds to Panda repository
 on:
   push:
-    branches: [ master ]
+    branches: [ master, 4.x, 5.x, 6.x ]
 jobs:
   publish:
     runs-on: ubuntu-latest
