--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,9 +1,9 @@
 name: FunnyGuilds CI
 on:
   push:
-    branches: [ 4.x, 5.x, 6.x ]
+    branches: [ master, 4.x, 5.x, 6.x ]
   pull_request:
-    branches: [ 4.x, 5.x, 6.x ]
+    branches: [ master, 4.x, 5.x, 6.x ]
 jobs:
   build:
     name: "Build with JDK${{ matrix.jdk }}"
