[cleanup] General update

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,9 @@ org.gradle.parallel=true
 org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 org.gradle.logging.stacktrace=full
 
+# KSP
+ksp.incremental=false
+
 # Maven Credentials
 mavenUser=
 mavenPassword=
